manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtccbapps
  namespace: ingress-basic
  labels:
    app: mtccbapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtccbapps
  template:
    metadata:
      labels:
        app: mtccbapps
    spec:
      containers:
        - name: mtccbapps
          # Replace  with your project ID or use `make template`
          image: acrspuat.azurecr.io/mtccbapps:latest
          # This setting makes nodes pull the docker image every time before
          # starting the pod. This is useful when debugging, but should be turned
          # off in production.
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
