manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mtccbapps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: mtccbapps
